# layoutlens

./: .actrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  benchmark_runner.py  eval.py  framework.py  gen_benchmark.py  pyproject.toml  requirements-test.txt  test_basic_functionality.py  test_homepage.html  tox.ini
.github/workflows/: ci.yml  docs.yml  python-publish.yml  release.yml  test.yml
benchmarks/: README.md  accessibility_showcase.html  benchmark.csv  benchmark_pairs.csv  css_grid_showcase.html  ecommerce_product.html  generation_summary.json  mobile_first_responsive.html  run_benchmark.py
benchmarks/accessibility/focus_management/: keyboard_navigation.html
benchmarks/answer_keys/: accessibility.json  layout_alignment.json  responsive_design.json  ui_components.json
benchmarks/basic_layouts/typography/: center_aligned_text.html  mixed_font_weights.html
benchmarks/evaluation/: evaluator.py
benchmarks/generators/: benchmark_runner.py  generate_a11y_ground_truth.py
benchmarks/ground_truth_tests/: GROUND_TRUTH_ANSWERS.md
benchmarks/ground_truth_tests/accessibility/: wcag_violations.html
benchmarks/ground_truth_tests/color_contrast/: contrast_violations.html
benchmarks/ground_truth_tests/layout_alignment/: buttons_misaligned.html  logo_wrong_alignment.html  nav_misaligned_center.html
benchmarks/ground_truth_tests/responsive_design/: mobile_breakpoints_broken.html
benchmarks/metadata/: test_suites.yaml
benchmarks/responsive_design/breakpoints/: mobile_tablet_desktop.html
benchmarks/results/: 2026-07-21_gpt-4o-mini.json
benchmarks/templates/: base_template.html  bootstrap_template.html  dense_template.html  minimal_template.html  modern_template.html  visual_template.html
benchmarks/test_data/accessibility/: focus_management_broken.html  focus_management_good.html  wcag_compliant.html  wcag_violations.html
benchmarks/test_data/layout_alignment/: flexbox_center_broken.html  flexbox_center_correct.html  grid_layout_broken.html  grid_layout_correct.html  logo_correct.html  logo_wrong.html  nav_centered.html  nav_centered_bootstrap.html  nav_centered_minimal.html  nav_misaligned.html  nav_misaligned_dense.html  nav_misaligned_visual.html
benchmarks/test_data/responsive_design/: container_queries_good.html  fluid_typography_good.html  mobile_broken.html  mobile_friendly.html  viewport_units_broken.html
benchmarks/test_data/ui_components/: form_well_designed.html
benchmarks/ui_components/cards/: product_card_grid.html
benchmarks/ui_components/forms/: contact_form.html  login_form.html
benchmarks/ui_components/navigation/: horizontal_navbar.html
benchmarks/ui_components/tables/: dashboard.html  data_table_responsive.html
docs/: Makefile  QUICK_START.md  conf.py  index.rst  testing.md
docs/api/: a11y.rst  analysis.rst  capture.rst  config.rst  core.rst  providers.rst  vision.rst
examples/: README.md  advanced_usage.py  async_usage.py  basic_usage.py  browser_use_integration.py  expert_prompts_demo.py  github_actions_examples.py  improvements_demo.py  layoutlens_config.yaml  sample_test_suite.yaml  simple_api_usage.py
layoutlens/: __init__.py  analyzer.py  browser.py  cache.py  capture.py  cli.py  cli_async.py  cli_commands.py  cli_interactive.py  config.py  core.py  exceptions.py  export.py  interactive.py  logger.py  reports.py  test_runner.py
layoutlens/a11y/: __init__.py  axe.py  types.py
layoutlens/analysis/: __init__.py
layoutlens/api/: core.py  test_suite.py
layoutlens/benchmark/: __init__.py
layoutlens/capture/: __init__.py
layoutlens/integrations/: __init__.py  github.py
layoutlens/integrations/browser_use/: __init__.py  reports.py  session.py  types.py  validator.py
layoutlens/providers/: __init__.py  base.py  factory.py  litellm_provider.py  openai_provider.py  openrouter_provider.py
layoutlens/utils/: __init__.py  screenshot_manager.py
layoutlens/vision/: __init__.py  analyzer.py  capture.py  comparator.py  page_tester.py  types.py
layoutlens_output/results/: accessibility_showcase_1757423955.json  contact_form_1757423953.json  css_grid_showcase_1757423957.json  dashboard_1757423951.json  ecommerce_product_1757423950.json  mobile_first_responsive_1757423959.json
legacy/: README.md  benchmark_runner.py  screenshot.py
scripts/: build_docs.py
scripts/testing/: page_tester.py
streamlit/: README.md  requirements.txt  run_app.sh  streamlit_app.py  test_streamlit.py
tests/: __init__.py  conftest.py  test_a11y.py  test_a11y_integration.py  test_async_functionality.py  test_benchmark_evaluator.py  test_browser_use_integration.py  test_caching.py  test_cli.py  test_cli_simple.py  test_comprehensive.py  test_core_api_fixes.py  test_core_providers.py  test_exceptions.py  test_interactive.py  test_providers.py  test_suite_functionality.py
tests/fixtures/expected_outputs/: simple_page_queries.json
tests/fixtures/mock_responses/: openai_responses.json
tests/fixtures/sample_pages/: responsive_page.html  simple_page.html
tests/integration/: test_full_workflow.py  test_page_testing.py  test_simple_workflow.py
tests/unit/: test_config.py  test_core.py  test_framework.py  test_provider_keys.py  test_query_generator.py  test_screenshot.py
