[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layoutlens"
version = "1.3.0"
description = "AI-powered UI testing framework with natural language visual validation"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Gaurav Sood", email = "contact@gsood.com"}
]
maintainers = [
    {name = "Gaurav Sood", email = "contact@gsood.com"}
]
keywords = ["ui testing", "visual regression", "ai", "computer vision", "web testing", "layout testing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
    "pydocstyle>=6.3.0",
]
interactive = [
    "rich>=13.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "furo>=2023.9.10",
    "myst-parser>=0.18.0",
    "sphinx-autodoc-typehints>=1.19.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "coverage[toml]>=7.0.0",
]

[project.urls]
"Homepage" = "https://github.com/gojiplus/layoutlens"
"Bug Reports" = "https://github.com/gojiplus/layoutlens/issues"
"Documentation" = "https://gojiplus.github.io/layoutlens/"
"Source" = "https://github.com/gojiplus/layoutlens"
"Changelog" = "https://github.com/gojiplus/layoutlens/blob/main/CHANGELOG.md"

[project.scripts]
layoutlens = "layoutlens.cli:main"
layoutlens-async = "layoutlens.cli_async:main"

[tool.setuptools]
packages = [
    "layoutlens",
    "layoutlens.api",
    "layoutlens.vision",
    "layoutlens.integrations",
    "layoutlens.providers"
]
include-package-data = true

[tool.setuptools.package-data]
layoutlens = ["*.yaml", "*.yml"]
examples = ["*.yaml", "*.yml", "*.html"]
benchmarks = ["templates/*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "requires_api: Tests that require API access",
    "performance: Performance benchmark tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["layoutlens"]
omit = [
    "tests/*",
    "setup.py",
    "*/conftest.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 120
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
known_first_party = ["layoutlens"]
known_third_party = ["pytest", "openai", "playwright", "beautifulsoup4", "yaml", "PIL"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false
strict_equality = false
ignore_missing_imports = true
follow_imports = "skip"
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = [
    "openai.*",
    "playwright.*",
    "bs4.*",
    "PIL.*",
    "yaml.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"
include = ["*.py", "*.pyi"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".tox",
    ".venv",
    "venv",
    "docs/conf.py",
    ".mypy_cache",
    ".pytest_cache",
    "htmlcov",
    ".coverage",
    "*.pyc",
    "*.pyo",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by line-length)
    "F401",  # imported but unused (handled per-file below)
    "F541",  # f-string is missing placeholders
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["F841"]
"*/tests/*" = ["F841"]
"examples/*" = ["F841"]

[tool.ruff.lint.isort]
known-first-party = ["layoutlens"]
